[package]
name = "askit-llm-agents"
version = "0.6.2"
description = "LLM Agents for Agent Stream Kit"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
agent-stream-kit = "0.13.0"
askit-macros = "0.13.0"
async-openai = { version = "0.30.1", optional = true }
async-trait = "0.1"
futures = { version = "0.3.31", optional = true }
ollama-rs = { version = "0.3.2", default-features = false, features = ["macros", "rustls", "stream"], optional = true }
photon-rs = { version = "0.3.3", optional = true }
regex = "1.12.2"
rmcp = { version = "0.8.5", features = ["client", "transport-child-process"], optional = true }
sakura-ai-rs = { version = "0.1.2", features = ["stream"], optional = true }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = ["image", "mcp", "ollama", "openai", "sakura"]
image = ["photon-rs"]
mcp = ["rmcp"]
ollama = ["ollama-rs" ]
openai = ["async-openai", "futures"]
sakura = ["sakura-ai-rs"]

# [patch.crates-io]
# agent-stream-kit = { path = "../agent-stream-kit/agent-stream-kit" }
# askit-macros = { path = "../agent-stream-kit/askit-macros" }
