[package]
name = "askit-llm-agents"
version = "0.7.0"
description = "LLM Agents for Agent Stream Kit"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
agent-stream-kit = "0.18.0"
async-openai = { version = "0.30.1", optional = true }
async-trait = "0.1"
futures = { version = "0.3.31", optional = true }
icu_normalizer = "2.1.1"
im = "15.1.0"
ollama-rs = { version = "0.3.2", default-features = false, features = ["macros", "rustls", "stream"], optional = true }
photon-rs = { version = "0.3.3", optional = true }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = { version = "0.29.3", features = ["tokenizers"] }
tokenizers = { version = "0.22.2", features = ["http"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = ["image", "ollama", "openai"]
image = ["photon-rs"]
ollama = ["ollama-rs" ]
openai = ["async-openai", "futures"]

# [patch.crates-io]
# agent-stream-kit = { path = "../agent-stream-kit/agent-stream-kit" }
